assets/css/main.sass
---
---
@import "bulma/utilities/_all"
@import "bulma/base/_all"
@import "bulma/layout/_all"
@import "bulma/elements/_all"

@import "bulma/grid/columns"
@import "bulma/components/pagination"

@import "variables"

@import "navigation"
@import "profile"
@import "posts"

.left
  float: left
.right
  float: right

html
  img
    max-height: 400px
    height: auto

  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
  background-color: #fdfdfd
  h1,h2,h3,h4,h5,h6
    color: $pink
    &.subheader
      font-weight: normal
  body
    @media screen and (min-width: 768px)
      margin-left: 0
      margin-right: 0
  a
    &.selected
      font-weight: bold
    color: $gray
    &:hover
      color: $pink

  i.image-caption
    display: block
    font-size: 0.75em
    text-align: center
    width: 100%
    margin: 1em 0 2em 0

  .horizontal-gallery
    display: flex
    overflow: auto
    margin: 1em calc(50% - 50vw)

  footer
    p
      margin-bottom: 2rem
      &.small
        display: inline-block
        font-size: 0.75em
      &.light
        font-weight: light
        color: $light-gray
  .columns .column
    @media (max-width: $desktop)
      padding: 50px
    img
      max-height: 300px
    .content
      padding: 1em 0 0.5em 0
  
  .content figure
    text-align: left

  h1
    font-weight: bolder
  
  .mini-project
    margin-bottom: 2em

  .icon
    width: 48px
    height: 48px

